# Jarvis-Platform

./: .gitignore  LICENSE  README.md  README_RU.md  config.json  start-jarvis.bat  start-jarvis.ps1
backend/: Cargo.toml
backend/src/: api.rs  main.rs  memory.rs  orchestrator.rs  runtime.rs
backend/src/api/: mod.rs
docs/: architecture.md
frontend/: package-lock.json  package.json
frontend/src/: index.html  main.js  preload.js
services/: requirements.txt
services/local_llm_orchestrator/: main.py  mock_orchestrator.py  python_generator.py  simple_orchestrator.py
